fix: fixing routing for profesional and client register at swagger
